Bug 510870 - Turning off LSP client setting to save on format does not apply until Kate restart
Summary: Turning off LSP client setting to save on format does not apply until Kate re...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-21 14:20 UTC by tomashnyk
Modified: 2025-10-31 06:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomashnyk 2025-10-21 14:20:36 UTC
Go to Setttings > LSP Client > Format on save

If it is unchecked and you check it, it starts applying.

When it is checked and you uncheck it, formatting is still applied on save until you restart Kate.
Comment 1 Bug Janitor Service 2025-10-22 05:48:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1925
Comment 2 Christoph Cullmann 2025-10-22 20:28:40 UTC
Git commit b3aede291bde73bef7a65b2bdd095f5509dcc958 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 22/10/2025 at 20:22.
Pushed by cullmann into branch 'master'.

lsp: clear formatOnSave connection in updateState

Otherwise we remain connected even if formatOnSave was disabled

M  +8    -4    addons/lspclient/lspclientpluginview.cpp

https://invent.kde.org/utilities/kate/-/commit/b3aede291bde73bef7a65b2bdd095f5509dcc958
Comment 3 Waqar Ahmed 2025-10-31 06:35:51 UTC
Git commit 902c288fa177759747f5b338273c04373877b2d4 by Waqar Ahmed.
Committed on 31/10/2025 at 06:27.
Pushed by waqar into branch 'release/25.08'.

lsp: clear formatOnSave connection in updateState

Otherwise we remain connected even if formatOnSave was disabled
(cherry picked from commit b3aede291bde73bef7a65b2bdd095f5509dcc958)

M  +8    -4    addons/lspclient/lspclientpluginview.cpp

https://invent.kde.org/utilities/kate/-/commit/902c288fa177759747f5b338273c04373877b2d4