lsp: clear formatOnSave connection in updateState

Otherwise we remain connected even if formatOnSave was disabled

BUG: 510870
(cherry picked from commit b3aede291bde73bef7a65b2bdd095f5509dcc958)